--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+hKIDoMCgREanY6RvXJw9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,20 +77,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####  Ciencia de datos"
+        "####  Ciencia de datos\n",
+        "\n",
+        "#####La ciencia de datos es un concepto más arquitectónico y multidisciplinario. En programación, se ve como el ciclo de vida completo del manejo de datos, donde la programación es el pegamento que une estadística, negocio y tecnología.\n",
+        "\n",
+        "#####Definición General: Es un campo interdisciplinario que utiliza métodos científicos, procesos, algoritmos y sistemas para extraer conocimiento e insights de datos estructurados y no estructurados. Abarca desde la limpieza de datos hasta la visualización y la toma de decisiones.\n",
+        "\n",
+        "#####Concepto en Programación:\n",
+        "\n",
+        "#####El \"Pipeline\" (Tubería): Para un programador, hacer Data Science implica construir un flujo de trabajo (pipeline). Implica escribir scripts para extraer datos (SQL/Scraping), limpiarlos (Pandas), analizarlos (donde entra la minería de datos) y visualizarlos (Matplotlib/Tableau).\n",
+        "\n",
+        "#####Enfoque: Se centra en la solución del problema de negocio. El código es un medio para responder una pregunta compleja.\n",
+        "\n",
+        "#####Herramientas: Lenguajes como Python y R, entornos como Jupyter Notebooks, y plataformas de nube (AWS, Azure).\n",
+        "\n",
+        "#####Analogía: La ciencia de datos es toda la operación geológica: desde decidir dónde excavar, gestionar la logística de la mina, usar el pico y la pala (minería de datos), hasta refinar el oro y venderlo en el mercado."
       ],
       "metadata": {
         "id": "Q88sVHJ--CNn"
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "#### Tarea 1"
+      ],
       "metadata": {
-        "id": "5uIAFlgO6vbd"
-      },
-      "outputs": [],
-      "source": []
+        "id": "cxmWkdnYjb12"
+      }
     }
   ]
 }
