Se creó con Colab

--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -105,6 +105,99 @@
       "metadata": {
         "id": "cxmWkdnYjb12"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(len)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-II5XZer8F94",
+        "outputId": "5e78c928-34e0-4910-fe23-66a758b4455f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function len in module builtins:\n",
+            "\n",
+            "len(obj, /)\n",
+            "    Return the number of items in a container.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len?"
+      ],
+      "metadata": {
+        "id": "3S73mH1f8og9"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = [1, 2, 3]"
+      ],
+      "metadata": {
+        "id": "JQh8vsN8RYKT"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L?"
+      ],
+      "metadata": {
+        "id": "ro4eT_RNRjqf"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def square(a):\n",
+        "    \"\"\"Return the square of a.\"\"\"\n",
+        "    return a ** 2"
+      ],
+      "metadata": {
+        "id": "9cl7TWGIRp36"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "square?"
+      ],
+      "metadata": {
+        "id": "UONwKUKqR3xc"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CqKio3NHSX0k"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
