--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -118,7 +118,7 @@
         "id": "-II5XZer8F94",
         "outputId": "5e78c928-34e0-4910-fe23-66a758b4455f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "3S73mH1f8og9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "JQh8vsN8RYKT"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "ro4eT_RNRjqf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "9cl7TWGIRp36"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
       "metadata": {
         "id": "UONwKUKqR3xc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,6 +195,457 @@
       "source": [],
       "metadata": {
         "id": "CqKio3NHSX0k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### IPython Magic Commands"
+      ],
+      "metadata": {
+        "id": "mU3UUqO4BOoZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#El comando magico %timeit sirve para evaluar el desempeño, en terminos de tiempo\n",
+        "%timeit L = [n ** 2 for n in range(1000)]"
+      ],
+      "metadata": {
+        "id": "j4zlck1fBcrh",
+        "outputId": "56cbb937-0c2f-4b51-ff9c-ae32002adb40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "88 µs ± 22.7 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#El comando magico %%timeit sirve tambien para evaluar el desempeño, solo que este abarca varias lineas de codigo en su lugar\n",
+        "%%timeit\n",
+        "L = []\n",
+        "for n in range(1000):\n",
+        "  L.append(n ** 2)"
+      ],
+      "metadata": {
+        "id": "qRWtAUcXBxUR",
+        "outputId": "6eb31e99-e15b-4571-e5c7-b29ba3dd7e11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "94.4 µs ± 27.1 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit?"
+      ],
+      "metadata": {
+        "id": "e8B2Pgj0DOTK"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%timeit?"
+      ],
+      "metadata": {
+        "id": "SdlFdLZSD0YD"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### IPython and Shell Commands"
+      ],
+      "metadata": {
+        "id": "gizcNZnFE304"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "id": "KRpGxsWeE6M5",
+        "outputId": "73be7922-927a-4619-d9ad-9ff5bf662645",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd sample_data/"
+      ],
+      "metadata": {
+        "id": "M18AEQBxFJSi",
+        "outputId": "84274a98-d4b9-4934-b682-abf7ce643740",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%ls"
+      ],
+      "metadata": {
+        "id": "dJgci9iRFMFZ",
+        "outputId": "18ae886a-9498-40c5-bd10-7b2551402abe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0m\u001b[01;32manscombe.json\u001b[0m*                mnist_test.csv\n",
+            "california_housing_test.csv   mnist_train_small.csv\n",
+            "california_housing_train.csv  \u001b[01;32mREADME.md\u001b[0m*\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat README.md"
+      ],
+      "metadata": {
+        "id": "whU3nmZDFNdZ",
+        "outputId": "526c070d-39f8-4fdd-a193-09bd3a452313",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This directory includes a few sample datasets to get you started.\n",
+            "\n",
+            "*   `california_housing_data*.csv` is California housing data from the 1990 US\n",
+            "    Census; more information is available at:\n",
+            "    https://docs.google.com/document/d/e/2PACX-1vRhYtsvc5eOR2FWNCwaBiKL6suIOrxJig8LcSBbmCbyYsayia_DvPOOBlXZ4CAlQ5nlDD8kTaIDRwrN/pub\n",
+            "\n",
+            "*   `mnist_*.csv` is a small sample of the\n",
+            "    [MNIST database](https://en.wikipedia.org/wiki/MNIST_database), which is\n",
+            "    described at: http://yann.lecun.com/exdb/mnist/\n",
+            "\n",
+            "*   `anscombe.json` contains a copy of\n",
+            "    [Anscombe's quartet](https://en.wikipedia.org/wiki/Anscombe%27s_quartet); it\n",
+            "    was originally described in\n",
+            "\n",
+            "    Anscombe, F. J. (1973). 'Graphs in Statistical Analysis'. American\n",
+            "    Statistician. 27 (1): 17-21. JSTOR 2682899.\n",
+            "\n",
+            "    and our copy was prepared by the\n",
+            "    [vega_datasets library](https://github.com/altair-viz/vega_datasets/blob/4f67bdaad10f45e3549984e17e1b3088c731503d/vega_datasets/_data/anscombe.json).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%env"
+      ],
+      "metadata": {
+        "id": "rpspHQXLFvE5",
+        "outputId": "f958cd9b-006a-4b37-85da-ce74665746d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'SHELL': '/bin/bash',\n",
+              " 'COLAB_JUPYTER_TRANSPORT': 'ipc',\n",
+              " 'CGROUP_MEMORY_EVENTS': '/sys/fs/cgroup/memory.events /var/colab/cgroup/jupyter-children/memory.events',\n",
+              " 'VM_GCE_METADATA_HOST': '169.254.169.253',\n",
+              " 'MODEL_PROXY_HOST': 'https://mp.kaggle.net',\n",
+              " 'HOSTNAME': '36d34a5800f0',\n",
+              " 'LANGUAGE': 'en_US',\n",
+              " 'TBE_RUNTIME_ADDR': '172.28.0.1:8011',\n",
+              " 'GCE_METADATA_TIMEOUT': '3',\n",
+              " 'COLAB_JUPYTER_IP': '172.28.0.12',\n",
+              " 'COLAB_LANGUAGE_SERVER_PROXY_ROOT_URL': 'http://172.28.0.1:8013/',\n",
+              " 'KMP_LISTEN_PORT': '6000',\n",
+              " 'TF_FORCE_GPU_ALLOW_GROWTH': 'true',\n",
+              " 'ENV': '/root/.bashrc',\n",
+              " 'PWD': '/',\n",
+              " 'TBE_EPHEM_CREDS_ADDR': '172.28.0.1:8009',\n",
+              " 'COLAB_LANGUAGE_SERVER_PROXY_REQUEST_TIMEOUT': '30s',\n",
+              " 'TBE_CREDS_ADDR': '172.28.0.1:8008',\n",
+              " 'COLAB_JUPYTER_TOKEN': '<hidden>',\n",
+              " 'LAST_FORCED_REBUILD': '20250623',\n",
+              " 'TCLLIBPATH': '/usr/share/tcltk/tcllib1.20',\n",
+              " 'COLAB_KERNEL_MANAGER_PROXY_HOST': '172.28.0.12',\n",
+              " 'UV_BUILD_CONSTRAINT': '',\n",
+              " 'COLAB_WARMUP_DEFAULTS': '1',\n",
+              " 'HOME': '/root',\n",
+              " 'LANG': 'en_US.UTF-8',\n",
+              " 'CLOUDSDK_CONFIG': '/content/.config',\n",
+              " 'UV_SYSTEM_PYTHON': 'true',\n",
+              " 'COLAB_RELEASE_TAG': 'release-colab-external_20260120-060051_RC00',\n",
+              " 'KMP_TARGET_PORT': '9000',\n",
+              " 'KMP_EXTRA_ARGS': '--logtostderr --listen_host=172.28.0.12 --target_host=172.28.0.12 --tunnel_background_save_url=https://colab.research.google.com/tun/m/cc48301118ce562b961b3c22d803539adc1e0c19/m-s-op0vt98p0kvz --tunnel_background_save_delay=10s --tunnel_periodic_background_save_frequency=30m0s --enable_output_coalescing=true --output_coalescing_required=true ',\n",
+              " 'UV_INSTALL_DIR': '/usr/local/bin',\n",
+              " 'COLAB_LANGUAGE_SERVER_PROXY_LSP_DIRS': '/datalab/web/pyright/typeshed-fallback/stdlib,/usr/local/lib/python3.10/dist-packages',\n",
+              " 'COLAB_KERNEL_MANAGER_PROXY_PORT': '6000',\n",
+              " 'CLOUDSDK_PYTHON': 'python3',\n",
+              " 'NO_GCE_CHECK': 'False',\n",
+              " 'PYTHONPATH': '/env/python',\n",
+              " 'SHLVL': '0',\n",
+              " 'COLAB_LANGUAGE_SERVER_PROXY': '/usr/colab/bin/language_service',\n",
+              " 'UV_CONSTRAINT': '',\n",
+              " 'PYTHONUTF8': '1',\n",
+              " 'COLAB_GPU': '',\n",
+              " 'GCS_READ_CACHE_BLOCK_SIZE_MB': '16',\n",
+              " 'LC_ALL': 'en_US.UTF-8',\n",
+              " 'COLAB_FILE_HANDLER_ADDR': 'localhost:3453',\n",
+              " 'PATH': '/opt/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/tools/node/bin:/tools/google-cloud-sdk/bin',\n",
+              " 'COLAB_IMAGE_TYPE': 'cpu',\n",
+              " 'COLAB_DEBUG_ADAPTER_MUX_PATH': '/usr/local/bin/dap_multiplexer',\n",
+              " 'PYTHONWARNINGS': 'ignore:::pip._internal.cli.base_command',\n",
+              " 'DEBIAN_FRONTEND': 'noninteractive',\n",
+              " 'COLAB_BACKEND_VERSION': 'next',\n",
+              " 'OLDPWD': '/',\n",
+              " '_PYVIZ_COMMS_INSTALLED': '1',\n",
+              " 'PYDEVD_USE_FRAME_EVAL': 'NO',\n",
+              " 'JPY_SESSION_NAME': 'https://github.com/TheCodeTester860/AntonioCabrera/blob/main/MineriaDeDatos.ipynb',\n",
+              " 'JPY_PARENT_PID': '87',\n",
+              " 'TERM': 'xterm-color',\n",
+              " 'CLICOLOR': '1',\n",
+              " 'PAGER': 'cat',\n",
+              " 'GIT_PAGER': 'cat',\n",
+              " 'MPLBACKEND': 'module://matplotlib_inline.backend_inline',\n",
+              " 'ENABLE_DIRECTORYPREFETCHER': '1',\n",
+              " 'USE_AUTH_EPHEM': '1',\n",
+              " 'COLAB_NOTEBOOK_ID': 'https://github.com/TheCodeTester860/AntonioCabrera/blob/main/MineriaDeDatos.ipynb'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "UFbzkAqsJIrR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "GxksEqAeGLsZ"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([1, 4, 2, 5, 3])"
+      ],
+      "metadata": {
+        "id": "naBHU2jUJKAy",
+        "outputId": "333e556d-73b1-4eab-c87d-7cc559d434d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 4, 2, 5, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([3.14, 4, 2, 3])"
+      ],
+      "metadata": {
+        "id": "kchPcvCwJOiA",
+        "outputId": "13c61f1c-c488-47b0-b006-b6b3be2e5277",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3.14, 4.  , 2.  , 3.  ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([1, 2, 3, 4], dtype='float32')"
+      ],
+      "metadata": {
+        "id": "CXgPcWDvJZo5",
+        "outputId": "3d4f73b6-62c0-485d-8bc9-8745bb5fada2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([1, 2, 3, 4], dtype='int')"
+      ],
+      "metadata": {
+        "id": "a_ZwGINTJfnJ",
+        "outputId": "ab812c41-1827-423f-9574-6f725537b897",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([range(i, i + 3) for i in [2, 4, 6]])"
+      ],
+      "metadata": {
+        "id": "9c-d-DchJqkp",
+        "outputId": "1a1a0806-9466-4303-c894-f48e025ada4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2, 3, 4],\n",
+              "       [4, 5, 6],\n",
+              "       [6, 7, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bKUNCpUZJ6iR"
       },
       "execution_count": null,
       "outputs": []
