Se agrego informacion de estadistica basica

--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -221,7 +221,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "e8B2Pgj0DOTK"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
       "metadata": {
         "id": "SdlFdLZSD0YD"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +506,7 @@
       "metadata": {
         "id": "GxksEqAeGLsZ"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -547,7 +547,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +625,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,6 +646,558 @@
       "source": [],
       "metadata": {
         "id": "bKUNCpUZJ6iR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###The Basics of NumPy Arrays"
+      ],
+      "metadata": {
+        "id": "S59JKFjIws4R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### NumPy Array Attributes\n"
+      ],
+      "metadata": {
+        "id": "Zm3ejaAAxWPw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "FpmsRBNvxXux"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(0)  # seed for reproducibility\n"
+      ],
+      "metadata": {
+        "id": "QMgyAaf9xamr"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1 = np.random.randint(10, size=6)  # One-dimensional array\n",
+        "x2 = np.random.randint(10, size=(3, 4))  # Two-dimensional array\n",
+        "x3 = np.random.randint(10, size=(3, 4, 5))  # Three-dimensional array"
+      ],
+      "metadata": {
+        "id": "tvu47Lxmxee5"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"x3 ndim: \", x3.ndim) #LA PROPIEDAD NDIM NOS DICE EL MUMERO DE DIMENSIONES\n",
+        "print(\"x3 shape:\", x3.shape)\n",
+        "print(\"x3 size: \", x3.size)"
+      ],
+      "metadata": {
+        "id": "GNy1yLAWxj8B",
+        "outputId": "6eea6d66-15ad-4a5e-d0af-f4bb13681c2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x3 ndim:  3\n",
+            "x3 shape: (3, 4, 5)\n",
+            "x3 size:  60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"dtype:\", x3.dtype) #dtype nos dice el tipo de datos"
+      ],
+      "metadata": {
+        "id": "Jo3pLz9ux6Zi",
+        "outputId": "bb82e097-c994-44b3-d2bf-9e684f2d4d4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"itemsize:\", x3.itemsize, \"bytes\") #\n",
+        "print(\"nbytes:\", x3.nbytes, \"bytes\")"
+      ],
+      "metadata": {
+        "id": "OOSOlhW6yhjx",
+        "outputId": "67902d7e-00c3-4ebd-9fc7-e5e85465d6da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "itemsize: 8 bytes\n",
+            "nbytes: 480 bytes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Array Indexing: Accessing Single Elements"
+      ],
+      "metadata": {
+        "id": "-1COT1bOzbrh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1"
+      ],
+      "metadata": {
+        "id": "bwGs5GCZzdGy",
+        "outputId": "044534d6-f5f2-4e52-ffe0-a171be5c77ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 0, 3, 3, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1[0] # Colocamos el indice del elemento a extraer, en este caso el primer elemento tienen el indice 0"
+      ],
+      "metadata": {
+        "id": "f5KPLeifz-uY",
+        "outputId": "4ea320b5-7d82-46d9-da5e-6ff9f28f19d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1[4]"
+      ],
+      "metadata": {
+        "id": "G0HaeAkZz_Tp",
+        "outputId": "577c23a3-6f5b-4556-dd53-410fdf8dd757",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1[-1] # Nos regresa el ultimo elemento del notarray"
+      ],
+      "metadata": {
+        "id": "cIT9HkJJ0arZ",
+        "outputId": "39974515-9786-405c-c787-1c09b62da0af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x2"
+      ],
+      "metadata": {
+        "id": "fIvmZHGe0nS5",
+        "outputId": "9e9b8617-b545-460c-f331-fed27381e559",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[3, 5, 2, 4],\n",
+              "       [7, 6, 8, 8],\n",
+              "       [1, 6, 7, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x2[0, 0]"
+      ],
+      "metadata": {
+        "id": "JcSHGilM0v0Z",
+        "outputId": "e11aa43d-056b-4cc5-bee0-e5690b05dd39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x2[0, 2]"
+      ],
+      "metadata": {
+        "id": "J7Yd51ia0yop",
+        "outputId": "f96501fb-69be-4fa9-a59b-fa312fdf9e3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x2[0, 0] = 12 #Asignar un nuevo valor (12) al renglon 0 columna 0\n",
+        "x2"
+      ],
+      "metadata": {
+        "id": "GCyrTcAu1NFZ",
+        "outputId": "504b53f2-ee74-4363-a6df-24d6284733a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[12,  5,  2,  4],\n",
+              "       [ 7,  6,  8,  8],\n",
+              "       [ 1,  6,  7,  7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Media (Mean)"
+      ],
+      "metadata": {
+        "id": "3lYpmaYb3OMA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array([1, 2, 3, 4, 5])\n",
+        "media = np.mean(data)\n",
+        "print(media)"
+      ],
+      "metadata": {
+        "id": "yEu6JR6W1uUB",
+        "outputId": "92e1f2a2-30fa-4712-c2c5-f8b644425576",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Promedio (Average) y Promedio Ponderado\n"
+      ],
+      "metadata": {
+        "id": "VnQZCFnN3dx4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array([1, 2, 3, 4, 5])\n",
+        "weights = np.array([1, 2, 3, 4, 5])\n",
+        "promedio = np.average(data)\n",
+        "promedio_ponderado = np.average(data, weights=weights)"
+      ],
+      "metadata": {
+        "id": "oIJCSkhg3e5Q"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(promedio)\n",
+        "print(promedio_ponderado)"
+      ],
+      "metadata": {
+        "id": "C1dUq8V-3hHR",
+        "outputId": "75bd175c-d146-4fdc-dbb8-68f2d0b5536f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0\n",
+            "3.6666666666666665\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Mediana\n"
+      ],
+      "metadata": {
+        "id": "CqtEtX2x37XQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mediana = np.median(data)"
+      ],
+      "metadata": {
+        "id": "vohCM0is38qI"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Varianza y Desviación Estándar\n"
+      ],
+      "metadata": {
+        "id": "Q8Nj98pU4uFg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "varianza = np.var(data)\n",
+        "desviacion = np.std(data)"
+      ],
+      "metadata": {
+        "id": "sdc9Xhu_4v6L"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Generación de Datos Aleatorios"
+      ],
+      "metadata": {
+        "id": "zS9mNLQb5FsY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "muestra = np.random.normal(0, 1, 1000)\n",
+        "print(np.mean(muestra), np.std(muestra))"
+      ],
+      "metadata": {
+        "id": "FXygQ4Gl5GeI",
+        "outputId": "d0ba5dc5-4adb-4001-c3ef-7a99afe01dad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-0.006543456960417206 1.0059985778093545\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Correlación"
+      ],
+      "metadata": {
+        "id": "Gtw2ku1o5XxA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corr = np.corrcoef([1,2,3], [1,5,7])\n",
+        "corr"
+      ],
+      "metadata": {
+        "id": "C3fmwmD45Hiw",
+        "outputId": "7031970f-c183-4ec2-a198-126593aeae9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.        , 0.98198051],\n",
+              "       [0.98198051, 1.        ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "abZTY1n65aFB"
       },
       "execution_count": null,
       "outputs": []
