--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -2294,7 +2294,7 @@
       "metadata": {
         "id": "Rd40Wk9PD_2B"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2306,7 +2306,7 @@
       "metadata": {
         "id": "F2MO_Fts-KLt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2330,7 +2330,7 @@
           "height": 564
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2378,7 +2378,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2402,7 +2402,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2444,7 +2444,7 @@
           "height": 565
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2502,7 +2502,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2531,7 +2531,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2560,7 +2560,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2590,7 +2590,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2618,7 +2618,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2652,7 +2652,7 @@
       "metadata": {
         "id": "EcC5EAUOE_k0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2662,8 +2662,7 @@
         "X = anios_escolaridad.reshape(-1, 1)\n",
         "y = ingreso_mensual_estimado_mx\n",
         "\n",
-        "X\n",
-        ""
+        "X\n"
       ],
       "metadata": {
         "id": "WyfZXQQFFSWU",
@@ -2672,7 +2671,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2713,7 +2712,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2771,7 +2770,7 @@
       "metadata": {
         "id": "DJC9DOaCHB8N"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2818,7 +2817,7 @@
           "height": 704
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2847,10 +2846,85 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Fórmulas de Indicadores de Desempeño\n",
+        "\n",
+        "**1. RMSE (Raíz del Error Cuadrático Medio)**\n",
+        "$$RMSE = \\sqrt{\\frac{\\sum_{i=1}^{n} (Y_i - \\hat{Y}_i)^2}{n}}$$\n",
+        "\n",
+        "**2. MAE (Error Absoluto Medio)**\n",
+        "$$MAE = \\frac{1}{n} \\sum_{i=1}^{n} |Y_i - \\hat{Y}_i|$$\n",
+        "\n",
+        "**3. $R^2$ (Coeficiente de Determinación)**\n",
+        "$$R^2 = 1 - \\frac{\\sum (Y_i - \\hat{Y}_i)^2}{\\sum (Y_i - \\bar{Y})^2}$$\n",
+        "*Donde $\\bar{Y}$ es el promedio de los valores observados.*\n",
+        "\n",
+        "**4. $R^2$ Ajustado**\n",
+        "$$R^2_{ajustado} = 1 - (1 - R^2) \\frac{n - 1}{n - p - 1}$$\n",
+        "*Donde $n$ es el número de datos y $p$ el número de predictores (variables independientes).*\n",
+        "\n",
+        "**5. MAPE (Error Porcentual Absoluto Medio)**\n",
+        "$$MAPE = \\frac{1}{n} \\sum_{i=1}^{n} \\left| \\frac{Y_i - \\hat{Y}_i}{Y_i} \\right| \\times 100$$\n"
+      ],
+      "metadata": {
+        "id": "H-_pqiwIL3nN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+        "\n",
+        "anios_escolaridad = np.array([0, 3, 6, 9, 12, 16, 18])\n",
+        "ingreso_mensual_estimado_mx = np.array([12621, 15723, 19587, 24401, 30398, 40747, 47176])\n",
+        "X = anios_escolaridad.reshape(-1, 1)\n",
+        "y = ingreso_mensual_estimado_mx\n",
+        "\n",
+        "modelo = LinearRegression()\n",
+        "modelo.fit(X, y)\n",
+        "y_pred_sklearn = modelo.predict(X)\n",
+        "mse_sklearn = mean_squared_error(y, y_pred_sklearn)\n",
+        "\n",
+        "rmse = np.sqrt(mse_sklearn)\n",
+        "mae = mean_absolute_error(y, y_pred_sklearn)\n",
+        "r2 = r2_score(y, y_pred_sklearn)\n",
+        "n = len(y); p = 1\n",
+        "r2_adj = 1 - (1 - r2) * (n - 1) / (n - p - 1)\n",
+        "mape = np.mean(np.abs((y - y_pred_sklearn) / y)) * 100\n",
+        "\n",
+        "print(\"Resultados recuperados:\")\n",
+        "print(f\"RMSE: {rmse:,.2f}\")\n",
+        "print(f\"MAPE: {mape:.2f}%\")"
+      ],
+      "metadata": {
+        "id": "wA9GHwwgG-jE",
+        "outputId": "0a95f950-60f5-418f-efd6-8e55a279ff18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Resultados recuperados:\n",
+            "RMSE: 2,138.23\n",
+            "MAPE: 8.31%\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wA9GHwwgG-jE"
+        "id": "rs41cS5NL99g"
       },
       "execution_count": null,
       "outputs": []
