--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -2938,7 +2938,7 @@
       "metadata": {
         "id": "rs41cS5NL99g"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2949,7 +2949,7 @@
       "metadata": {
         "id": "DTDrGnYH47ak"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2965,7 +2965,7 @@
           "height": 272
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3049,7 +3049,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3079,7 +3079,7 @@
           "height": 238
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3338,7 +3338,7 @@
           "height": 175
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3581,7 +3581,7 @@
           "height": 272
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3665,7 +3665,7 @@
           "height": 206
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3851,7 +3851,7 @@
           "height": 143
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4019,7 +4019,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4047,7 +4047,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4073,7 +4073,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4105,7 +4105,7 @@
           "height": 272
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4189,7 +4189,7 @@
           "height": 300
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4388,7 +4388,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ACTIVIDAD: importat csv de las encuesta de edades, tomar la columna de edades, aplicar el comando de describe e info"
+        "ACTIVIDAD: Con pandas importat csv de las encuesta de edades, tomar la columna de edades, aplicar el comando de describe e info"
       ],
       "metadata": {
         "id": "sfjRd6aw9q_K"
@@ -4416,7 +4416,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
