--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -4429,12 +4429,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# 1. Montar Google Drive (si no lo has hecho ya)\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 2. Cargar el CSV desde la ruta donde lo tienes guardado\n",
+        "# Nota: Asegúrate que esta sea la ruta correcta en tu Drive.\n",
+        "# Basado en tu código anterior, parece ser esta:\n",
+        "ruta_archivo = '/content/drive/MyDrive/Mineria/datos.csv'\n",
+        "df = pd.read_csv(ruta_archivo)\n",
+        "\n",
+        "# 3. Limpieza rápida de nombres de columnas (opcional pero recomendado)\n",
+        "# Esto quita espacios vacíos al inicio/final de los nombres\n",
+        "df.columns = [c.strip() for c in df.columns]\n",
+        "\n",
+        "# 4. Tomar la columna de edades\n",
+        "# Usamos el nombre exacto que tiene en el archivo\n",
+        "columna_edades = df['¿Cuántos años cumplidos tienes?']\n",
+        "\n",
+        "# 5. Aplicar describe e info\n",
+        "print(\"--- ESTADÍSTICAS (DESCRIBE) ---\")\n",
+        "print(columna_edades.describe())\n",
+        "\n",
+        "print(\"\\n--- INFORMACIÓN (INFO) ---\")\n",
+        "# Para .info() necesitamos hacerlo sobre el DataFrame de esa columna\n",
+        "df[['¿Cuántos años cumplidos tienes?']].info()"
+      ],
       "metadata": {
-        "id": "gUHYPZJs-Bxp"
+        "id": "gUHYPZJs-Bxp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "59dc5777-0981-40a8-d3f6-eee523143a74"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "--- ESTADÍSTICAS (DESCRIBE) ---\n",
+            "count    60.000000\n",
+            "mean     22.300000\n",
+            "std       1.356716\n",
+            "min      20.000000\n",
+            "25%      21.000000\n",
+            "50%      22.000000\n",
+            "75%      23.000000\n",
+            "max      26.000000\n",
+            "Name: ¿Cuántos años cumplidos tienes?, dtype: float64\n",
+            "\n",
+            "--- INFORMACIÓN (INFO) ---\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 60 entries, 0 to 59\n",
+            "Data columns (total 1 columns):\n",
+            " #   Column                           Non-Null Count  Dtype\n",
+            "---  ------                           --------------  -----\n",
+            " 0   ¿Cuántos años cumplidos tienes?  60 non-null     int64\n",
+            "dtypes: int64(1)\n",
+            "memory usage: 612.0 bytes\n"
+          ]
+        }
+      ]
     }
   ]
 }
