--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -4800,7 +4800,7 @@
           "height": 206
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5029,7 +5029,7 @@
           "height": 398
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5146,7 +5146,7 @@
       "metadata": {
         "id": "cvhg2HMEEDVw"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5162,7 +5162,7 @@
           "height": 429
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5274,7 +5274,7 @@
           "height": 206
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5514,7 +5514,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5563,7 +5563,7 @@
           "height": 210
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5665,7 +5665,7 @@
           "height": 332
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5974,7 +5974,7 @@
           "height": 1000
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6036,7 +6036,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6083,7 +6083,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6153,7 +6153,7 @@
           "height": 970
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6326,6 +6326,138 @@
       "source": [],
       "metadata": {
         "id": "aWfdcTTZRQdw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Probabilidad condicional"
+      ],
+      "metadata": {
+        "id": "HoGjLuNa6ril"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [0,1,2,3,4,5,6,7,8,9,10]\n",
+        "len(numeros)"
+      ],
+      "metadata": {
+        "id": "sCFaGtF46seg",
+        "outputId": "b4366a21-9f3a-486d-ad59-c3a0fd5d4280",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "probabilidad_par = 6/11\n",
+        "probabilidad_par"
+      ],
+      "metadata": {
+        "id": "KSv57m8s7HAI",
+        "outputId": "db3b24ca-7e2b-4312-96d3-4c7e4d91c808",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5454545454545454"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "probabilidad_impar = 5/11\n",
+        "probabilidad_impar"
+      ],
+      "metadata": {
+        "id": "di00fiEv7WqA",
+        "outputId": "e8c6f6ea-3e41-4951-ea1a-ce63283ec451",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.45454545454545453"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "¿Qué es la probabilidad condicional?"
+      ],
+      "metadata": {
+        "id": "Ugp9JNG26vzf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La **probabilidad condicional** mide la probabilidad de que ocurra un evento **A**, sabiendo que ya ocurrió un evento **B**.\n",
+        "\n",
+        "Se denota así:\n",
+        "\n",
+        "$$P(A|B)$$\n",
+        "\n",
+        "Y su fórmula es:\n",
+        "\n",
+        "$$P(A|B) = \\frac{P(A \\cap B)}{P(B)}$$\n",
+        "\n",
+        "donde:\n",
+        "\n",
+        "* $P(A \\cap B)$ : probabilidad de que ocurran A y B a la vez.\n",
+        "* $P(B)$ : probabilidad de que ocurra B.\n",
+        "\n",
+        "⚠️ Importante: solo tiene sentido si $P(B) > 0$."
+      ],
+      "metadata": {
+        "id": "3YfgdRwZ8Cx7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Xd5zkNSX7eVw"
       },
       "execution_count": null,
       "outputs": []
